--- a/invoice-app-frontend/package.json
+++ b/invoice-app-frontend/package.json
@@ -12,14 +12,17 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-export-table-to-excel": "^1.0.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "use-debounce": "^10.0.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "scripts": {
@@ -47,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/xlsx": "^0.0.36",
     "tailwindcss": "^3.4.3"
   }
 }
